[package]
name = "rustle"
author = ["stoykotolev <st.tolev@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "A wordle clone to play in the terminal"
license = "MIT"
repository = "https://github.com/stoykotolev/rustle"
homepage = "https://github.com/stoykotolev/rustle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.26"
rodio = "0.16.0"
