[package]
name = "strustle"
author = ["stoykotolev <st.tolev@gmail.com>"]
version = "0.1.3"
edition = "2021"
description = "A wordle clone to play in the terminal"
license = "MIT"
repository = "https://github.com/stoykotolev/rustle"
homepage = "https://github.com/stoykotolev/rustle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.41"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rodio = "0.20.1"
