[package]
name = "strustle"
authors = ["stoykotolev <st.tolev@gmail.com>"]
version = "0.3.0"
edition = "2021"
description = "A wordle clone to play in the terminal"
license = "MIT"
repository = "https://github.com/stoykotolev/rustle"
homepage = "https://github.com/stoykotolev/rustle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "strustle"
path = "src/lib.rs"

[[bin]]
name = "strustle"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.43"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rodio = "0.20.1"
thiserror = "1"
ratatui = "0.29"
crossterm = "0.28"
